[tool.poetry]
name = "execute-timer"
version = "0.1.0"
description = ""
authors = ["magisystem0408 <61937077+magisystem0408@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
